test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/GET__api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Tue, 27 May 2025 16:34:14 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="3paKEtAfXCRTI84Maq1AOAMIGST9y/MO", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}